@@ -36,6 +36,9 @@ totest['unknown'] = [
             Trying "reStructuredText-unknown-directive" as canonical directive name.
     <system_message level="3" line="1" source="test data" type="ERROR">
         <paragraph>
+            Directive "reStructuredText-unknown-directive" not registered (canonical name "restructuredtext-unknown-directive").
+    <system_message level="3" line="1" source="test data" type="ERROR">
+        <paragraph>
             Unknown directive type "reStructuredText-unknown-directive".
         <literal_block xml:space="preserve">
             .. reStructuredText-unknown-directive::
@@ -45,6 +48,9 @@ totest['unknown'] = [
             Trying "reStructuredText-unknown-directive" as canonical directive name.
     <system_message level="3" line="3" source="test data" type="ERROR">
         <paragraph>
+            Directive "reStructuredText-unknown-directive" not registered (canonical name "restructuredtext-unknown-directive").
+    <system_message level="3" line="3" source="test data" type="ERROR">
+        <paragraph>
             Unknown directive type "reStructuredText-unknown-directive".
         <literal_block xml:space="preserve">
             .. reStructuredText-unknown-directive:: argument
@@ -52,6 +58,9 @@ totest['unknown'] = [
         <paragraph>
             No directive entry for "reStructuredText-unknown-directive" in module "docutils.parsers.rst.languages.en".
             Trying "reStructuredText-unknown-directive" as canonical directive name.
+    <system_message level="3" line="5" source="test data" type="ERROR">
+        <paragraph>
+            Directive "reStructuredText-unknown-directive" not registered (canonical name "restructuredtext-unknown-directive").
     <system_message level="3" line="5" source="test data" type="ERROR">
         <paragraph>
             Unknown directive type "reStructuredText-unknown-directive".
